kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  namespace: mbt
spec:
  tls:
  - hosts:
    - demo.mbtbundle.org
    - api.mbtbundle.org
    - opencart.mbtbundle.org
    secretName: echo-tls
  rules:
  - host: demo.mbtbundle.org
    http:
      paths:
        - path: /
          backend:
            serviceName: admin
            servicePort: 80
  - host: api.mbtbundle.org
    http:
      paths:
        - path: /
          backend:
            serviceName: api-nginx
            servicePort: 80
  - host: opencart.mbtbundle.org
    http:
      paths:
        - path: /
          backend:
            serviceName: app
            servicePort: 80
